[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Enemies/LinkBosses.png" type="Texture" id=1]
[ext_resource path="res://assets/Effects/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://instance/hurtboxAndHitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://instance/enemy/Boss.gd" type="Script" id=4]
[ext_resource path="res://instance/game/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://instance/enemy/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://instance/hurtboxAndHitbox/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 288, 520, 72, 65 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 360, 520, 72, 65 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 432, 520, 72, 65 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Boss",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.5
height = 19.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 25.9442
height = 15.2783

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.34104, 9.80964 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 24.4122

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2147483664
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -37 )
frames = SubResource( 4 )
animation = "Boss"
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.62669, -2.75127 )
scale = Vector2( 1.21094, 1.2125 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.25, -1.25 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -3.54369, -44.1094 )
shape = SubResource( 6 )

[node name="EnemyStats" parent="." instance=ExtResource( 5 )]
max_health = 7

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2( 18.9433, -52.4539 )
scale = Vector2( 14.4387, 12.5938 )
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -3.54369, -38.4989 )
rotation = 1.5708
shape = SubResource( 8 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetection"]

[editable path="Hitbox"]
